# composite

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  access.cc  builder.cc  cast.cc  composite.cc  types.cc  visitor.cc
lib/include/: access.hh  builder.hh  cast.hh  composite.hh  deduce.hh  types.hh  visitor.hh
src/: CMakeLists.txt  access.hh  builder.cc  builder.hh  composite.cc  composite.hh  deduce.hh  make.hh  traits.hh  types.cc  types.hh  visitor.cc  visitor.hh
src/include/composite/: access.hh  composite.hh  make.hh  visitor.hh
test/: CMakeLists.txt  access.cc  builder.cc  cast.cc  composite.cc  deduce.cc  make.cc  sample.hh  visitor.cc
